; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/wpp/extr_ppl.yy.c_get_string.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/wpp/extr_ppl.yy.c_get_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@strbuf_idx = common dso_local global i32 0, align 4
@strbuffer = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @get_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_string() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i8*, align 8
  %3 = load i32, i32* @strbuf_idx, align 4
  %4 = add nsw i32 %3, 1
  %5 = call i8* @pp_xmalloc(i32 %4)
  store i8* %5, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %0
  store i8* null, i8** %1, align 8
  br label %19

9:                                                ; preds = %0
  %10 = load i8*, i8** %2, align 8
  %11 = load i32, i32* @strbuffer, align 4
  %12 = load i32, i32* @strbuf_idx, align 4
  %13 = call i32 @memcpy(i8* %10, i32 %11, i32 %12)
  %14 = load i8*, i8** %2, align 8
  %15 = load i32, i32* @strbuf_idx, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i8, i8* %14, i64 %16
  store i8 0, i8* %17, align 1
  %18 = load i8*, i8** %2, align 8
  store i8* %18, i8** %1, align 8
  br label %19

19:                                               ; preds = %9, %8
  %20 = load i8*, i8** %1, align 8
  ret i8* %20
}

declare dso_local i8* @pp_xmalloc(i32) #1

declare dso_local i32 @memcpy(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
